Version 1.0.3 (2010-09-16)

    * SECURITY FIX: Deny access to dict.__init__() to protect __builtins__.

Version 1.0.2 (2010-09-15)

    * SECURITY FIX: Deny access to all dict methods able to modify a dict, not
      only dict.__delitem__ and dict.__setitem__.

Version 1.0.1 (2010-07-26)
    * Fix Python 2.5 compatibility
    * Fix Sandbox.execute(): don't create a new object for globals and locals
      when the user pass its own dict, only proxify the keys and values

Version 1.0 (2010-06-29)
    * First public release
