@@ -4,8 +4,9 @@ Version 1.0.3 (2010-09-16)
 
 Version 1.0.2 (2010-09-15)
 
-    * SECURITY FIX: Deny access to all dict methods able to modify a dict, not
-      only dict.__delitem__ and dict.__setitem__.
+    * SECURITY FIX: Deny access to all dict methods able to modify a dict to
+      protect __builtins__: block clear, pop, popitem, setdefault and update
+      methods (__delitem__ and __setitem__ were already blocked).
 
 Version 1.0.1 (2010-07-26)
     * Fix Python 2.5 compatibility
